--- a/NaviBar/app/src/main/res/layout/activity_main.xml
+++ b/NaviBar/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout" />
     </FrameLayout>
 
 </RelativeLayout>
