--- a/NaviBar/app/src/main/res/layout/fragment_map_gsu_2ndfloor.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_map_gsu_2ndfloor.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/gsu_2nfloor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
