--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -87,6 +87,7 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv"
+                        android:scrollbars="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
@@ -147,6 +148,7 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv2"
+                        android:scrollbars="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
