--- a/NaviBar/app/src/main/res/values/colors.xml
+++ b/NaviBar/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="red">#fa6f57</color>
     <color name="titleBarBkg">#fa6f57</color>
     <color name="darkRed">#B71C1C</color>
-    <color name="white">#FFEBEE</color>
+    <color name="white">#FFFFFF</color>
     <color name="colorPrimaryText">#050505</color>
 </resources>
